# python-rag-mcp-client

./: .env.example  .gitignore  Dockerfile  MULTI_SERVER_README.md  README.md  client.py  docker-compose.yml  main.py  mcp.json  pyproject.toml  rag_server.py  server.py  test_production.py
deployments/: init.sql  redis.conf
docs/: AI模型配置.md  API调用示例.md  readme.md  部署指南.md  项目说明.md
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: start.sh
src/: __init__.py
src/api/: main.py  rag_endpoints.py
src/config/: settings.py
src/core/: connection_pool.py  database.py
src/models/: __init__.py  rag_models.py
src/services/: document_service.py  embedding_service.py  mcp_service.py  search_service.py
src/utils/: cache.py  error_handling.py  health_check.py  logging.py  metrics.py  rag_metrics.py
